# libdof

./: CLAUDE.md  CMakeLists.txt  NOTES.md  README.md  dofserver.ini  ledwiz_test.cpp  pacled64_direct_test.cpp
.claude/skills/review-csharp/: SKILL.md
.github/workflows/: libdof.yml
include/DOF/: Config.h  DOF.h
patch/: README.md
src/: Config.cpp  DOF.cpp  DirectOutputHandler.cpp  DirectOutputHandler.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Pinball.cpp  Pinball.h  Pinscape.cpp  Pinscape.h  PinscapeDevice.cpp  PinscapeDevice.h  dofServer.cpp  test.cpp  test.h  testDofServer.cpp
src/cab/: Cabinet.cpp  Cabinet.h  CabinetOutputList.cpp  CabinetOutputList.h  CabinetOwner.cpp  CabinetOwner.h  ICabinetOwner.cpp  ICabinetOwner.h
src/cab/overrides/: TableOverrideSetting.cpp  TableOverrideSetting.h  TableOverrideSettingDevice.cpp  TableOverrideSettingDevice.h  TableOverrideSettings.cpp  TableOverrideSettings.h
src/cab/schedules/: ScheduledSetting.cpp  ScheduledSetting.h  ScheduledSettingDevice.cpp  ScheduledSettingDevice.h  ScheduledSettings.cpp  ScheduledSettings.h
src/cab/sequencer/: SequentialOutputSetting.cpp  SequentialOutputSetting.h  SequentialOutputSettings.cpp  SequentialOutputSettings.h
src/cab/toys/: IAnalogAlphaToy.h  ILayerToy.h  IMatrixToy.h  IRGBAToy.h  IRGBOutputToy.h  ISingleOutputToy.h  IToy.cpp  IToy.h  IToyUpdatable.cpp  IToyUpdatable.h  ToyBase.cpp  ToyBase.h  ToyBaseUpdatable.cpp  ToyBaseUpdatable.h  ToyEventArgs.cpp  ToyEventArgs.h  ToyList.cpp  ToyList.h
src/fx/: AssignedEffect.cpp  AssignedEffect.h  AssignedEffectList.cpp  AssignedEffectList.h  EffectBase.cpp  EffectBase.h  EffectEffectBase.cpp  EffectEffectBase.h  EffectEventArgs.cpp  EffectEventArgs.h  EffectFactory.cpp  EffectFactory.h  EffectList.cpp  EffectList.h  EffectRegistrations.cpp  FadeModeEnum.h  IEffect.cpp  IEffect.h  RetriggerBehaviourEnum.h
src/fx/analogtoyfx/: AnalogToyEffectBase.cpp  AnalogToyEffectBase.h  AnalogToyValueEffect.cpp  AnalogToyValueEffect.h  AnanlogToyEffectBase.cpp
src/fx/conditionfx/: TableElementConditionEffect.cpp  TableElementConditionEffect.h
src/fx/listfx/: ListEffect.cpp  ListEffect.h
src/fx/matrixfx/: AnalogAlphaMatrixBitmapAnimationEffect.cpp  AnalogAlphaMatrixBitmapAnimationEffect.h  AnalogAlphaMatrixBitmapEffect.cpp  AnalogAlphaMatrixBitmapEffect.h  AnalogAlphaMatrixFlickerEffect.cpp  AnalogAlphaMatrixFlickerEffect.h  AnalogAlphaMatrixShiftEffect.cpp  AnalogAlphaMatrixShiftEffect.h  AnalogAlphaMatrixValueEffect.cpp  AnalogAlphaMatrixValueEffect.h  AnimationBehaviourEnum.h  IMatrixBitmapEffect.h  IMatrixEffect.h  MatrixAnimationStepDirectionEnum.h  MatrixBitmapAnimationEffectBase.cpp  MatrixBitmapAnimationEffectBase.h  MatrixBitmapEffectBase.cpp  MatrixBitmapEffectBase.h  MatrixColorScaleEffectBase.cpp  MatrixColorScaleEffectBase.h  MatrixEffectBase.cpp  MatrixEffectBase.h  MatrixFlickerEffectBase.cpp  MatrixFlickerEffectBase.h  MatrixPlasmaEffectBase.cpp  MatrixPlasmaEffectBase.h  MatrixShiftDirectionEnum.h  MatrixShiftEffectBase.cpp  MatrixShiftEffectBase.h  MatrixValueEffectBase.cpp  MatrixValueEffectBase.h  RGBAMatrixBitmapAnimationEffect.cpp  RGBAMatrixBitmapAnimationEffect.h  RGBAMatrixBitmapEffect.cpp  RGBAMatrixBitmapEffect.h  RGBAMatrixColorEffect.cpp  RGBAMatrixColorEffect.h  RGBAMatrixColorScaleBitmapAnimationEffect.cpp  RGBAMatrixColorScaleBitmapAnimationEffect.h  RGBAMatrixColorScaleBitmapEffect.cpp  (+11 more)
src/fx/nullfx/: NullEffect.cpp  NullEffect.h
src/fx/rgbafx/: RGBAColorEffect.cpp  RGBAColorEffect.h  RGBAEffectBase.cpp  RGBAEffectBase.h
src/fx/timmedfx/: BlinkEffect.cpp  BlinkEffect.h  BlinkEffectUntriggerBehaviourEnum.h  DelayEffect.cpp  DelayEffect.h  DurationEffect.cpp  DurationEffect.h  ExtendDurationEffect.cpp  ExtendDurationEffect.h  FadeEffect.cpp  FadeEffect.h  FadeEffectDurationModeEnum.h  MaxDurationEffect.cpp  MaxDurationEffect.h  MinDurationEffect.cpp  MinDurationEffect.h
src/fx/valuefx/: ValueInvertEffect.cpp  ValueInvertEffect.h  ValueMapFullRangeEffect.cpp  ValueMapFullRangeEffect.h
src/general/: Curve.cpp  Curve.h  CurveList.cpp  CurveList.h  DirectoryInfo.cpp  DirectoryInfo.h  FileInfo.cpp  FileInfo.h  FilePattern.cpp  FilePattern.h  FilePatternList.cpp  FilePatternList.h  FileReader.cpp  FileReader.h  IOConfigurator.cpp  IOConfigurator.h  MathExtensions.cpp  MathExtensions.h  StringExtensions.cpp  StringExtensions.h  Utils.h
src/general/analog/: AnalogAlpha.cpp  AnalogAlpha.h
src/general/bitmap/: FastBitmap.cpp  FastBitmap.h  FastBitmapDataExtractModeEnum.h  FastImage.cpp  FastImage.h  FastImageList.cpp  FastImageList.h  Image.cpp  Image.h  PixelData.cpp  PixelData.h
src/general/color/: ColorList.cpp  ColorList.h  ColorScale.cpp  ColorScale.h  RGBAColor.cpp  RGBAColor.h  RGBAColorNamed.cpp  RGBAColorNamed.h  RGBColor.cpp  RGBColor.h  RGBColorNamed.cpp  RGBColorNamed.h
src/general/generic/: Event.h  INamedItem.h  IXmlSerializable.h  NameChangeEventArgs.cpp  NameChangeEventArgs.h  NamedItemBase.cpp  NamedItemBase.h  NamedItemList.h
src/globalconfiguration/: GlobalConfig.cpp  GlobalConfig.h  GlobalConfiguration.cpp  GlobalConfiguration.h
src/ledcontrol/loader/: ColorConfig.cpp  ColorConfig.h  ColorConfigList.cpp  ColorConfigList.h  LedControl.cpp  LedControl.h  LedControlConfig.cpp  LedControlConfig.h  LedControlConfigList.cpp  LedControlConfigList.h  OutputControlEnum.h  OutputTypeEnum.h  TableConfig.cpp  TableConfig.h  TableConfigColumn.cpp  TableConfigColumn.h  TableConfigColumnList.cpp  TableConfigColumnList.h  TableConfigList.cpp  TableConfigList.h  TableConfigSetting.cpp  TableConfigSetting.h  TableVariablesDictionary.cpp  TableVariablesDictionary.h  VariablesDictionary.cpp  VariablesDictionary.h
src/ledcontrol/setup/: Configurator.cpp  (+1 more)
src/pinballsupport/: Action.h  AlarmHandler.cpp  AlarmHandler.h  InputQueue.cpp  InputQueue.h
src/table/: Table.cpp  Table.h  TableConfigSourceEnum.h  TableElement.cpp  TableElement.h  TableElementData.cpp  TableElementData.h  TableElementList.cpp  TableElementList.h  TableElementTypeEnum.h
src/tools/: dof_test.cpp  ledwiz_test.cpp  pacled64_test.cpp
(+38 files in other folders)
